<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clouds"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="146dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/accounticon" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/tEmail"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/tPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/bsingnin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFD700"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/bsignin"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="#2B2B2B" />

</LinearLayout>